apps/tikto/overlays/prod/patch-replicas.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: tikto
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto-profile-api
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto-tasks-api
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto-calendar-api
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto-dashboard-api
spec:
  replicas: 1
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: tikto-gateway
spec:
  replicas: 1
