apps/tikto/overlays/prod/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tikto
  annotations:
    link.argocd.argoproj.io/external-link: http://tikto-prod.example.com
spec:
  type: ClusterIP
