apps/tikto/overlays/prod/services-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: tikto-stable
  namespace: tikto-prod
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tikto-canary
  namespace: tikto-prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: 3000
