apps/tikto/overlays/prod/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tikto-virtual-service
  namespace: tikto-prod
spec:
  hosts:
    - "*"
  gateways:
    - tikto-gateway
  http:
    - name: primary
      route:
        - destination:
            host: tikto-stable
            port:
              number: 80
          weight: 100
        - destination:
            host: tikto-canary
            port:
              number: 80
          weight: 0
