apps/tikto/overlays/prod/services-backend-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: tikto-gateway-stable
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: gateway
  ports:
    - name: http
      port: 4000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: tikto-gateway-canary
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: gateway
  ports:
    - name: http
      port: 4000
      targetPort: http
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tikto-gateway-vs
spec:
  hosts:
    - tikto-gateway
  http:
    - name: canary-header
      match:
        - headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: tikto-gateway-canary
            port:
              number: 4000
    - name: primary
      route:
        - destination:
            host: tikto-gateway-stable
            port:
              number: 4000
          weight: 100
        - destination:
            host: tikto-gateway-canary
            port:
              number: 4000
          weight: 0
